add flags and others
